// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`With Snapshot Testing Plp - show filters button 1`] = `
<DocumentFragment>
  .c12 {
  width: 150px;
  min-height: 220px;
  padding: 10px;
  text-align: center;
  margin: 0;
}

.c13 {
  border-radius: 3px;
  border: 1px solid #ccc;
}

.c2 {
  color: black;
  padding-right: 5px;
}

.c2:hover {
  color: #f00;
}

.c2:visited {
  color: black;
}

.c1 {
  font-weight: bold;
  text-transform: capitalize;
  padding-right: 10px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row wrap;
  -ms-flex-flow: row wrap;
  flex-flow: row wrap;
}

.c3 {
  width: 100%;
  text-align: center;
  text-transform: capitalize;
  margin-bottom: 0px;
  background-color: #eee;
}

.c7 {
  width: 170px;
  padding: 10px;
}

.c8 {
  color: black;
  font-size: 12px;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: block;
  padding-left: 10px;
  text-indent: -15px;
  margin-bottom: 6px;
}

.c8::before {
  content: url("/static/checkbox_checked.svg");
  position: relative;
  bottom: -2px;
}

.c9 {
  color: black;
  font-size: 12px;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: block;
  padding-left: 10px;
  text-indent: -15px;
  margin-bottom: 6px;
}

.c9::before {
  content: url("/static/checkbox_unchecked.svg");
  position: relative;
  bottom: -2px;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row wrap;
  -ms-flex-flow: row wrap;
  flex-flow: row wrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: column nowrap;
  -ms-flex-flow: column nowrap;
  flex-flow: column nowrap;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: column nowrap;
  -ms-flex-flow: column nowrap;
  flex-flow: column nowrap;
}

.c4 {
  position: -webkit-sticky;
  position: sticky;
  position: -webkit-sticky;
  display: block;
  top: 5px;
}

@media only screen and (min-width:380px) and (max-width:640px) {
  .c12 {
    margin: 0 12px;
  }
}

@media only screen and (min-width:641px) and (max-width:780px) {
  .c12 {
    padding: 10px 5px;
    margin: 0;
  }
}

@media only screen and (max-width:640px) {
  .c10 {
    display: none;
  }
}

@media only screen and (min-width:640px) {
  .c4 {
    display: none;
  }
}

<div>
    <nav
      class="c0"
    >
      <div
        class="c1"
      >
        mens
      </div>
      <a
        class="c2"
        href="/mens/shop/accessories"
      >
        Accessories
      </a>
      <a
        class="c2"
        href="/mens/shop/shoes"
      >
        Shoes
      </a>
      <a
        class="c2"
        href="/mens/shop/clothing"
      >
        Clothing
      </a>
      <a
        class="c2"
        href="/mens/shop/bags"
      >
        Bags
      </a>
      <a
        class="c2"
        href="/mens/shop/homeware"
      >
        Homeware
      </a>
    </nav>
    <nav
      class="c0"
    >
      <div
        class="c1"
      >
        womens
      </div>
      <a
        class="c2"
        href="/womens/shop/accessories"
      >
        Accessories
      </a>
      <a
        class="c2"
        href="/womens/shop/bags"
      >
        Bags
      </a>
      <a
        class="c2"
        href="/womens/shop/clothing"
      >
        Clothing
      </a>
      <a
        class="c2"
        href="/womens/shop/shoes"
      >
        Shoes
      </a>
      <a
        class="c2"
        href="/womens/shop/homeware"
      >
        Homeware
      </a>
    </nav>
    <h1
      class="c3"
    >
      mens
    </h1>
    <button
      class="c4"
      id="filterButton"
    >
      Show Filters
    </button>
    <div
      class="c5"
    >
      <div
        class="cheeseburger-menu"
      >
        <div
          class="cheeseburger-menu-overlay"
          style="position: fixed; top: 0px; bottom: 0px; left: 0px; right: 0px; z-index: 1001; background: rgba(0, 0, 0, 0.3); opacity: 0; transition: opacity 0.3s, transform 0s 0.3s; transform: translate3d(100%, 0px, 0px);"
        />
        <div
          tolerance="0"
        >
          <div
            class="cheeseburger-menu-outer"
            style="position: fixed; left: 0px; top: 0px; bottom: 0px; z-index: 1002; width: 220px; max-width: 80%; transition: transform 0.3s; transform: translate3d(-100%, 0px, 0px); transform-origin: left; background-color: white;"
          >
            <div
              class="cheeseburger-menu-inner touch"
              style="height: 100%; padding-bottom: 0px; overflow-y: auto;"
            >
              <div
                class="c6"
              >
                <div
                  class="c7"
                >
                  <h2>
                    Category
                  </h2>
                  <a
                    class="c8"
                    href="#"
                  >
                    Activewear
                  </a>
                  <a
                    class="c9"
                    href="#"
                  >
                    Blazers
                  </a>
                  <a
                    class="c9"
                    href="#"
                  >
                    Casual Shirts
                  </a>
                  <a
                    class="c9"
                    href="#"
                  >
                    Coats and Jackets
                  </a>
                  <a
                    class="c9"
                    href="#"
                  >
                    Formal Shirts
                  </a>
                  <a
                    class="c9"
                    href="#"
                  >
                    Jeans
                  </a>
                  <a
                    class="c9"
                    href="#"
                  >
                    Knitwear
                  </a>
                  <a
                    class="c9"
                    href="#"
                  >
                    Polo Shirts
                  </a>
                  <a
                    class="c9"
                    href="#"
                  >
                    Shorts
                  </a>
                  <a
                    class="c9"
                    href="#"
                  >
                    Suits
                  </a>
                  <a
                    class="c9"
                    href="#"
                  >
                    Sweats
                  </a>
                  <a
                    class="c9"
                    href="#"
                  >
                    Swimwear
                  </a>
                  <a
                    class="c9"
                    href="#"
                  >
                    T-Shirts
                  </a>
                  <a
                    class="c9"
                    href="#"
                  >
                    Trousers
                  </a>
                  <a
                    class="c9"
                    href="#"
                  >
                    Underwear and Nightwear
                  </a>
                </div>
                <div
                  class="c7"
                >
                  <h2>
                    Designer
                  </h2>
                  <a
                    class="c9"
                    href="#"
                  >
                    1017 ALYX 9SM
                  </a>
                  <a
                    class="c9"
                    href="#"
                  >
                    2XU
                  </a>
                  <a
                    class="c9"
                    href="#"
                  >
                    And Wander
                  </a>
                  <a
                    class="c9"
                    href="#"
                  >
                    Aztech Mountain
                  </a>
                  <a
                    class="c9"
                    href="#"
                  >
                    Blackbarrett by Neil Barrett
                  </a>
                  <a
                    class="c9"
                    href="#"
                  >
                    Café Du Cycliste
                  </a>
                  <a
                    class="c9"
                    href="#"
                  >
                    Castore
                  </a>
                  <a
                    class="c9"
                    href="#"
                  >
                    Falke
                  </a>
                  <a
                    class="c9"
                    href="#"
                  >
                    Fendi
                  </a>
                  <a
                    class="c9"
                    href="#"
                  >
                    Helly Hansen
                  </a>
                  <a
                    class="c9"
                    href="#"
                  >
                    Iffley Road
                  </a>
                  <a
                    class="c9"
                    href="#"
                  >
                    LNDR
                  </a>
                  <a
                    class="c9"
                    href="#"
                  >
                    Mammut Delta X
                  </a>
                  <a
                    class="c9"
                    href="#"
                  >
                    Moncler
                  </a>
                  <a
                    class="c9"
                    href="#"
                  >
                    Moncler Genius
                  </a>
                  <a
                    class="c9"
                    href="#"
                  >
                    Moncler Grenoble
                  </a>
                  <a
                    class="c9"
                    href="#"
                  >
                    Nemen
                  </a>
                  <a
                    class="c9"
                    href="#"
                  >
                    Peak Performance
                  </a>
                  <a
                    class="c9"
                    href="#"
                  >
                    Perfect Moment
                  </a>
                  <a
                    class="c9"
                    href="#"
                  >
                    Salomon
                  </a>
                  <a
                    class="c9"
                    href="#"
                  >
                    Satisfy
                  </a>
                  <a
                    class="c9"
                    href="#"
                  >
                    The Upside
                  </a>
                  <a
                    class="c9"
                    href="#"
                  >
                    Tilak
                  </a>
                </div>
                <div
                  class="c7"
                >
                  <h2>
                    Colour
                  </h2>
                  <a
                    class="c9"
                    href="#"
                  >
                    Black
                  </a>
                  <a
                    class="c9"
                    href="#"
                  >
                    Blue
                  </a>
                  <a
                    class="c9"
                    href="#"
                  >
                    Brown
                  </a>
                  <a
                    class="c9"
                    href="#"
                  >
                    Green
                  </a>
                  <a
                    class="c9"
                    href="#"
                  >
                    Grey
                  </a>
                  <a
                    class="c9"
                    href="#"
                  >
                    Metallic
                  </a>
                  <a
                    class="c9"
                    href="#"
                  >
                    Navy
                  </a>
                  <a
                    class="c9"
                    href="#"
                  >
                    Neutral
                  </a>
                  <a
                    class="c9"
                    href="#"
                  >
                    Orange
                  </a>
                  <a
                    class="c9"
                    href="#"
                  >
                    Print
                  </a>
                  <a
                    class="c9"
                    href="#"
                  >
                    Purple
                  </a>
                  <a
                    class="c9"
                    href="#"
                  >
                    Red
                  </a>
                  <a
                    class="c9"
                    href="#"
                  >
                    Tan
                  </a>
                  <a
                    class="c9"
                    href="#"
                  >
                    White
                  </a>
                  <a
                    class="c9"
                    href="#"
                  >
                    Yellow
                  </a>
                </div>
                <div
                  class="c7"
                >
                  <h2>
                    Clothes Size
                  </h2>
                  <a
                    class="c9"
                    href="#"
                  >
                    XXS
                  </a>
                  <a
                    class="c9"
                    href="#"
                  >
                    XS
                  </a>
                  <a
                    class="c9"
                    href="#"
                  >
                    S
                  </a>
                  <a
                    class="c9"
                    href="#"
                  >
                    M
                  </a>
                  <a
                    class="c9"
                    href="#"
                  >
                    L
                  </a>
                  <a
                    class="c9"
                    href="#"
                  >
                    XL
                  </a>
                  <a
                    class="c9"
                    href="#"
                  >
                    XXL
                  </a>
                  <a
                    class="c9"
                    href="#"
                  >
                    3XL
                  </a>
                </div>
              </div>
            </div>
            <div
              class="cheeseburger-menu-shadow"
              style="position: absolute; z-index: -1; width: 100%; height: 100%; transition: opacity 0.3s; box-shadow: 0 0 15px 0 rgba(0, 0, 0, .2); opacity: 0; top: 0px; bottom: 0px; left: 0px; right: 0px;"
            />
          </div>
        </div>
      </div>
      <div
        class="c10"
      >
        <div
          class="c7"
        >
          <h2>
            Category
          </h2>
          <a
            class="c8"
            href="#"
          >
            Activewear
          </a>
          <a
            class="c9"
            href="#"
          >
            Blazers
          </a>
          <a
            class="c9"
            href="#"
          >
            Casual Shirts
          </a>
          <a
            class="c9"
            href="#"
          >
            Coats and Jackets
          </a>
          <a
            class="c9"
            href="#"
          >
            Formal Shirts
          </a>
          <a
            class="c9"
            href="#"
          >
            Jeans
          </a>
          <a
            class="c9"
            href="#"
          >
            Knitwear
          </a>
          <a
            class="c9"
            href="#"
          >
            Polo Shirts
          </a>
          <a
            class="c9"
            href="#"
          >
            Shorts
          </a>
          <a
            class="c9"
            href="#"
          >
            Suits
          </a>
          <a
            class="c9"
            href="#"
          >
            Sweats
          </a>
          <a
            class="c9"
            href="#"
          >
            Swimwear
          </a>
          <a
            class="c9"
            href="#"
          >
            T-Shirts
          </a>
          <a
            class="c9"
            href="#"
          >
            Trousers
          </a>
          <a
            class="c9"
            href="#"
          >
            Underwear and Nightwear
          </a>
        </div>
        <div
          class="c7"
        >
          <h2>
            Designer
          </h2>
          <a
            class="c9"
            href="#"
          >
            1017 ALYX 9SM
          </a>
          <a
            class="c9"
            href="#"
          >
            2XU
          </a>
          <a
            class="c9"
            href="#"
          >
            And Wander
          </a>
          <a
            class="c9"
            href="#"
          >
            Aztech Mountain
          </a>
          <a
            class="c9"
            href="#"
          >
            Blackbarrett by Neil Barrett
          </a>
          <a
            class="c9"
            href="#"
          >
            Café Du Cycliste
          </a>
          <a
            class="c9"
            href="#"
          >
            Castore
          </a>
          <a
            class="c9"
            href="#"
          >
            Falke
          </a>
          <a
            class="c9"
            href="#"
          >
            Fendi
          </a>
          <a
            class="c9"
            href="#"
          >
            Helly Hansen
          </a>
          <a
            class="c9"
            href="#"
          >
            Iffley Road
          </a>
          <a
            class="c9"
            href="#"
          >
            LNDR
          </a>
          <a
            class="c9"
            href="#"
          >
            Mammut Delta X
          </a>
          <a
            class="c9"
            href="#"
          >
            Moncler
          </a>
          <a
            class="c9"
            href="#"
          >
            Moncler Genius
          </a>
          <a
            class="c9"
            href="#"
          >
            Moncler Grenoble
          </a>
          <a
            class="c9"
            href="#"
          >
            Nemen
          </a>
          <a
            class="c9"
            href="#"
          >
            Peak Performance
          </a>
          <a
            class="c9"
            href="#"
          >
            Perfect Moment
          </a>
          <a
            class="c9"
            href="#"
          >
            Salomon
          </a>
          <a
            class="c9"
            href="#"
          >
            Satisfy
          </a>
          <a
            class="c9"
            href="#"
          >
            The Upside
          </a>
          <a
            class="c9"
            href="#"
          >
            Tilak
          </a>
        </div>
        <div
          class="c7"
        >
          <h2>
            Colour
          </h2>
          <a
            class="c9"
            href="#"
          >
            Black
          </a>
          <a
            class="c9"
            href="#"
          >
            Blue
          </a>
          <a
            class="c9"
            href="#"
          >
            Brown
          </a>
          <a
            class="c9"
            href="#"
          >
            Green
          </a>
          <a
            class="c9"
            href="#"
          >
            Grey
          </a>
          <a
            class="c9"
            href="#"
          >
            Metallic
          </a>
          <a
            class="c9"
            href="#"
          >
            Navy
          </a>
          <a
            class="c9"
            href="#"
          >
            Neutral
          </a>
          <a
            class="c9"
            href="#"
          >
            Orange
          </a>
          <a
            class="c9"
            href="#"
          >
            Print
          </a>
          <a
            class="c9"
            href="#"
          >
            Purple
          </a>
          <a
            class="c9"
            href="#"
          >
            Red
          </a>
          <a
            class="c9"
            href="#"
          >
            Tan
          </a>
          <a
            class="c9"
            href="#"
          >
            White
          </a>
          <a
            class="c9"
            href="#"
          >
            Yellow
          </a>
        </div>
        <div
          class="c7"
        >
          <h2>
            Clothes Size
          </h2>
          <a
            class="c9"
            href="#"
          >
            XXS
          </a>
          <a
            class="c9"
            href="#"
          >
            XS
          </a>
          <a
            class="c9"
            href="#"
          >
            S
          </a>
          <a
            class="c9"
            href="#"
          >
            M
          </a>
          <a
            class="c9"
            href="#"
          >
            L
          </a>
          <a
            class="c9"
            href="#"
          >
            XL
          </a>
          <a
            class="c9"
            href="#"
          >
            XXL
          </a>
          <a
            class="c9"
            href="#"
          >
            3XL
          </a>
        </div>
      </div>
      <div
        class="c11"
      >
        <div
          class="c12"
        >
          <a
            aria-label="Hooded zip-up track jacket"
            href="/products/Blackbarrett-by-Neil-Barrett-Hooded-zip-up-track-jacket-1245717"
          >
            <img
              alt="Hooded zip-up track jacket"
              src="//assetsprx.matchesfashion.com/img/product/1245717_1_small.jpg"
              width="100%"
            />
          </a>
          Hooded zip-up track jacket
          <p
            class="c13"
          >
            £555
          </p>
        </div>
        <div
          class="c12"
        >
          <a
            aria-label="Agile technical ripstop jacket "
            href="/products/Salomon-Agile-technical-ripstop-jacket--1263536"
          >
            <img
              alt="Agile technical ripstop jacket "
              src="//assetsprx.matchesfashion.com/img/product/1263536_1_small.jpg"
              width="100%"
            />
          </a>
          Agile technical ripstop jacket 
          <p
            class="c13"
          >
            £70
          </p>
        </div>
        <div
          class="c12"
        >
          <a
            aria-label="Logo-print cotton-blend T-shirt"
            href="/products/Blackbarrett-by-Neil-Barrett-Logo-print-cotton-blend-T-shirt-1245726"
          >
            <img
              alt="Logo-print cotton-blend T-shirt"
              src="//assetsprx.matchesfashion.com/img/product/1245726_1_small.jpg"
              width="100%"
            />
          </a>
          Logo-print cotton-blend T-shirt
          <p
            class="c13"
          >
            £120
          </p>
        </div>
        <div
          class="c12"
        >
          <a
            aria-label="Accelerate compression stretch leggings"
            href="/products/2XU-Accelerate-compression-stretch-leggings-1261981"
          >
            <img
              alt="Accelerate compression stretch leggings"
              src="//assetsprx.matchesfashion.com/img/product/1261981_1_small.jpg"
              width="100%"
            />
          </a>
          Accelerate compression stretch leggings
          <p
            class="c13"
          >
            £80
          </p>
        </div>
        <div
          class="c12"
        >
          <a
            aria-label="Hooded technical jacket"
            href="/products/And-Wander-Hooded-technical-jacket-1256827"
          >
            <img
              alt="Hooded technical jacket"
              src="//assetsprx.matchesfashion.com/img/product/1256827_1_small.jpg"
              width="100%"
            />
          </a>
          Hooded technical jacket
          <p
            class="c13"
          >
            £440
          </p>
        </div>
        <div
          class="c12"
        >
          <a
            aria-label="Hybrid mesh T-shirt"
            href="/products/And-Wander-Hybrid-mesh-T-shirt-1256819"
          >
            <img
              alt="Hybrid mesh T-shirt"
              src="//assetsprx.matchesfashion.com/img/product/1256819_1_small.jpg"
              width="100%"
            />
          </a>
          Hybrid mesh T-shirt
          <p
            class="c13"
          >
            £180
          </p>
        </div>
        <div
          class="c12"
        >
          <a
            aria-label="Technical track pants"
            href="/products/Blackbarrett-by-Neil-Barrett-Technical-track-pants-1245719"
          >
            <img
              alt="Technical track pants"
              src="//assetsprx.matchesfashion.com/img/product/1245719_1_small.jpg"
              width="100%"
            />
          </a>
          Technical track pants
          <p
            class="c13"
          >
            £290
          </p>
        </div>
        <div
          class="c12"
        >
          <a
            aria-label="Tech-Preme logo-patch technical sweatshirt"
            href="/products/LNDR-Tech-Preme-logo-patch-technical-sweatshirt-1247264"
          >
            <img
              alt="Tech-Preme logo-patch technical sweatshirt"
              src="//assetsprx.matchesfashion.com/img/product/1247264_1_small.jpg"
              width="100%"
            />
          </a>
          Tech-Preme logo-patch technical sweatshirt
          <p
            class="c13"
          >
            £155
          </p>
        </div>
        <div
          class="c12"
        >
          <a
            aria-label="FF-logo zip-through cotton-blend hooded sweatshirt"
            href="/products/Fendi-FF-logo-zip-through-cotton-blend-hooded-sweatshirt-1256167"
          >
            <img
              alt="FF-logo zip-through cotton-blend hooded sweatshirt"
              src="//assetsprx.matchesfashion.com/img/product/1256167_1_small.jpg"
              width="100%"
            />
          </a>
          FF-logo zip-through cotton-blend hooded sweatshirt
          <p
            class="c13"
          >
            £690
          </p>
        </div>
        <div
          class="c12"
        >
          <a
            aria-label="Logo-patch raglan jersey T-shirt"
            href="/products/And-Wander-Logo-patch-raglan-jersey-T-shirt-1256820"
          >
            <img
              alt="Logo-patch raglan jersey T-shirt"
              src="//assetsprx.matchesfashion.com/img/product/1256820_1_small.jpg"
              width="100%"
            />
          </a>
          Logo-patch raglan jersey T-shirt
          <p
            class="c13"
          >
            £145
          </p>
        </div>
        <div
          class="c12"
        >
          <a
            aria-label="Belted stretch trousers"
            href="/products/And-Wander-Belted-stretch-trousers-1256815"
          >
            <img
              alt="Belted stretch trousers"
              src="//assetsprx.matchesfashion.com/img/product/1256815_1_small.jpg"
              width="100%"
            />
          </a>
          Belted stretch trousers
          <p
            class="c13"
          >
            £305
          </p>
        </div>
        <div
          class="c12"
        >
          <a
            aria-label="FF cotton-blend hooded sweatshirt"
            href="/products/Fendi-FF-cotton-blend-hooded-sweatshirt-1256180"
          >
            <img
              alt="FF cotton-blend hooded sweatshirt"
              src="//assetsprx.matchesfashion.com/img/product/1256180_1_small.jpg"
              width="100%"
            />
          </a>
          FF cotton-blend hooded sweatshirt
          <p
            class="c13"
          >
            £450
          </p>
        </div>
        <div
          class="c12"
        >
          <a
            aria-label="GHST two-in-one jacket "
            href="/products/2XU-GHST-two-in-one-jacket--1261985"
          >
            <img
              alt="GHST two-in-one jacket "
              src="//assetsprx.matchesfashion.com/img/product/1261985_1_small.jpg"
              width="100%"
            />
          </a>
          GHST two-in-one jacket 
          <p
            class="c13"
          >
            £135
          </p>
        </div>
        <div
          class="c12"
        >
          <a
            aria-label="Logo-patch crew-neck cotton T-shirt"
            href="/products/Fendi-Logo-patch-crew-neck-cotton-T-shirt-1221480"
          >
            <img
              alt="Logo-patch crew-neck cotton T-shirt"
              src="//assetsprx.matchesfashion.com/img/product/1221480_1_small.jpg"
              width="100%"
            />
          </a>
          Logo-patch crew-neck cotton T-shirt
          <p
            class="c13"
          >
            £250
          </p>
        </div>
        <div
          class="c12"
        >
          <a
            aria-label="Urban jersey track pants"
            href="/products/2XU-Urban-jersey-track-pants-1261994"
          >
            <img
              alt="Urban jersey track pants"
              src="//assetsprx.matchesfashion.com/img/product/1261994_1_small.jpg"
              width="100%"
            />
          </a>
          Urban jersey track pants
          <p
            class="c13"
          >
            £45
          </p>
        </div>
        <div
          class="c12"
        >
          <a
            aria-label="Run West moth-eaten cotton T-shirt"
            href="/products/Satisfy-Run-West-moth-eaten-cotton-T-shirt-1256197"
          >
            <img
              alt="Run West moth-eaten cotton T-shirt"
              src="//assetsprx.matchesfashion.com/img/product/1256197_1_small.jpg"
              width="100%"
            />
          </a>
          Run West moth-eaten cotton T-shirt
          <p
            class="c13"
          >
            £105
          </p>
        </div>
        <div
          class="c12"
        >
          <a
            aria-label="Contrast-panel hooded bomber jacket"
            href="/products/Moncler-Contrast-panel-hooded-bomber-jacket-1194379"
          >
            <img
              alt="Contrast-panel hooded bomber jacket"
              src="//assetsprx.matchesfashion.com/img/product/1194379_1_small.jpg"
              width="100%"
            />
          </a>
          Contrast-panel hooded bomber jacket
          <p
            class="c13"
          >
            £595
          </p>
        </div>
        <div
          class="c12"
        >
          <a
            aria-label="Cult moth-eaten cotton tank top"
            href="/products/Satisfy-Cult-moth-eaten-cotton-tank-top-1256190"
          >
            <img
              alt="Cult moth-eaten cotton tank top"
              src="//assetsprx.matchesfashion.com/img/product/1256190_1_small.jpg"
              width="100%"
            />
          </a>
          Cult moth-eaten cotton tank top
          <p
            class="c13"
          >
            £105
          </p>
        </div>
        <div
          class="c12"
        >
          <a
            aria-label="Striped cotton-blend track pants"
            href="/products/Fendi-Striped-cotton-blend-track-pants-1221482"
          >
            <img
              alt="Striped cotton-blend track pants"
              src="//assetsprx.matchesfashion.com/img/product/1221482_1_small.jpg"
              width="100%"
            />
          </a>
          Striped cotton-blend track pants
          <p
            class="c13"
          >
            £450
          </p>
        </div>
        <div
          class="c12"
        >
          <a
            aria-label="Rix hooded jacket"
            href="/products/Castore-Rix-hooded-jacket-1262681"
          >
            <img
              alt="Rix hooded jacket"
              src="//assetsprx.matchesfashion.com/img/product/1262681_1_small.jpg"
              width="100%"
            />
          </a>
          Rix hooded jacket
          <p
            class="c13"
          >
            £245
          </p>
        </div>
        <div
          class="c12"
        >
          <a
            aria-label="Front-stripe logo-printed jersey sweatshirt"
            href="/products/Fendi-Front-stripe-logo-printed-jersey-sweatshirt-1256166"
          >
            <img
              alt="Front-stripe logo-printed jersey sweatshirt"
              src="//assetsprx.matchesfashion.com/img/product/1256166_1_small.jpg"
              width="100%"
            />
          </a>
          Front-stripe logo-printed jersey sweatshirt
          <p
            class="c13"
          >
            £490
          </p>
        </div>
        <div
          class="c12"
        >
          <a
            aria-label="Logo print cotton-blend T-shirt"
            href="/products/Blackbarrett-by-Neil-Barrett-Logo-print-cotton-blend-T-shirt-1245725"
          >
            <img
              alt="Logo print cotton-blend T-shirt"
              src="//assetsprx.matchesfashion.com/img/product/1245725_1_small.jpg"
              width="100%"
            />
          </a>
          Logo print cotton-blend T-shirt
          <p
            class="c13"
          >
            £120
          </p>
        </div>
        <div
          class="c12"
        >
          <a
            aria-label="Zip-pocket track shorts"
            href="/products/Blackbarrett-by-Neil-Barrett-Zip-pocket-track-shorts-1245720"
          >
            <img
              alt="Zip-pocket track shorts"
              src="//assetsprx.matchesfashion.com/img/product/1245720_1_small.jpg"
              width="100%"
            />
          </a>
          Zip-pocket track shorts
          <p
            class="c13"
          >
            £238
          </p>
        </div>
        <div
          class="c12"
        >
          <a
            aria-label="Striped cotton-blend jersey T-shirt"
            href="/products/Blackbarrett-by-Neil-Barrett-Striped-cotton-blend-jersey-T-shirt-1245727"
          >
            <img
              alt="Striped cotton-blend jersey T-shirt"
              src="//assetsprx.matchesfashion.com/img/product/1245727_1_small.jpg"
              width="100%"
            />
          </a>
          Striped cotton-blend jersey T-shirt
          <p
            class="c13"
          >
            £150
          </p>
        </div>
        <div
          class="c12"
        >
          <a
            aria-label="The Redford cotton sweatshirt"
            href="/products/The-Upside-The-Redford-cotton-sweatshirt-1263588"
          >
            <img
              alt="The Redford cotton sweatshirt"
              src="//assetsprx.matchesfashion.com/img/product/1263588_1_small.jpg"
              width="100%"
            />
          </a>
          The Redford cotton sweatshirt
          <p
            class="c13"
          >
            £120
          </p>
        </div>
        <div
          class="c12"
        >
          <a
            aria-label="Baldwin checked cotton shirt"
            href="/products/Aztech-Mountain-Baldwin-checked-cotton-shirt-1256157"
          >
            <img
              alt="Baldwin checked cotton shirt"
              src="//assetsprx.matchesfashion.com/img/product/1256157_1_small.jpg"
              width="100%"
            />
          </a>
          Baldwin checked cotton shirt
          <p
            class="c13"
          >
            £565
          </p>
        </div>
        <div
          class="c12"
        >
          <a
            aria-label="Seamless compression tights"
            href="/products/Falke-Ess-Seamless-compression-tights-1247647"
          >
            <img
              alt="Seamless compression tights"
              src="//assetsprx.matchesfashion.com/img/product/1247647_1_small.jpg"
              width="100%"
            />
          </a>
          Seamless compression tights
          <p
            class="c13"
          >
            £45
          </p>
        </div>
        <div
          class="c12"
        >
          <a
            aria-label="Reverse cotton T-shirt"
            href="/products/Satisfy-Reverse-cotton-T-shirt-1256192"
          >
            <img
              alt="Reverse cotton T-shirt"
              src="//assetsprx.matchesfashion.com/img/product/1256192_1_small.jpg"
              width="100%"
            />
          </a>
          Reverse cotton T-shirt
          <p
            class="c13"
          >
            £80
          </p>
        </div>
        <div
          class="c12"
        >
          <a
            aria-label="Marlow technical-twill running jacket"
            href="/products/Iffley-Road-Marlow-technical-twill-running-jacket-1261935"
          >
            <img
              alt="Marlow technical-twill running jacket"
              src="//assetsprx.matchesfashion.com/img/product/1261935_1_small.jpg"
              width="100%"
            />
          </a>
          Marlow technical-twill running jacket
          <p
            class="c13"
          >
            £210
          </p>
        </div>
        <div
          class="c12"
        >
          <a
            aria-label="Big Logo-print cotton tank top"
            href="/products/The-Upside-Big-Logo-print-cotton-tank-top-1263586"
          >
            <img
              alt="Big Logo-print cotton tank top"
              src="//assetsprx.matchesfashion.com/img/product/1263586_1_small.jpg"
              width="100%"
            />
          </a>
          Big Logo-print cotton tank top
          <p
            class="c13"
          >
            £60
          </p>
        </div>
        <div
          class="c12"
        >
          <a
            aria-label="Windsor II stretch-jersey leggings"
            href="/products/Iffley-Road-Windsor-II-stretch-jersey-leggings-1261936"
          >
            <img
              alt="Windsor II stretch-jersey leggings"
              src="//assetsprx.matchesfashion.com/img/product/1261936_1_small.jpg"
              width="100%"
            />
          </a>
          Windsor II stretch-jersey leggings
          <p
            class="c13"
          >
            £90
          </p>
        </div>
        <div
          class="c12"
        >
          <a
            aria-label="Sense Pro crew-neck T-shirt"
            href="/products/Salomon-Sense-Pro-crew-neck-T-shirt-1263540"
          >
            <img
              alt="Sense Pro crew-neck T-shirt"
              src="//assetsprx.matchesfashion.com/img/product/1263540_1_small.jpg"
              width="100%"
            />
          </a>
          Sense Pro crew-neck T-shirt
          <p
            class="c13"
          >
            £50
          </p>
        </div>
        <div
          class="c12"
        >
          <a
            aria-label="Mesh zip-up track top"
            href="/products/Blackbarrett-by-Neil-Barrett-Mesh-zip-up-track-top-1245722"
          >
            <img
              alt="Mesh zip-up track top"
              src="//assetsprx.matchesfashion.com/img/product/1245722_1_small.jpg"
              width="100%"
            />
          </a>
          Mesh zip-up track top
          <p
            class="c13"
          >
            £330
          </p>
        </div>
        <div
          class="c12"
        >
          <a
            aria-label="The Newman cotton T-shirt"
            href="/products/The-Upside-The-Newman-cotton-T-shirt-1263591"
          >
            <img
              alt="The Newman cotton T-shirt"
              src="//assetsprx.matchesfashion.com/img/product/1263591_1_small.jpg"
              width="100%"
            />
          </a>
          The Newman cotton T-shirt
          <p
            class="c13"
          >
            £80
          </p>
        </div>
        <div
          class="c12"
        >
          <a
            aria-label="Court-stripe leggings"
            href="/products/Blackbarrett-by-Neil-Barrett-Court-stripe-leggings-1245728"
          >
            <img
              alt="Court-stripe leggings"
              src="//assetsprx.matchesfashion.com/img/product/1245728_1_small.jpg"
              width="100%"
            />
          </a>
          Court-stripe leggings
          <p
            class="c13"
          >
            £198
          </p>
        </div>
        <div
          class="c12"
        >
          <a
            aria-label="Big Logo-print cotton tank top"
            href="/products/The-Upside-Big-Logo-print-cotton-tank-top-1263596"
          >
            <img
              alt="Big Logo-print cotton tank top"
              src="//assetsprx.matchesfashion.com/img/product/1263596_1_small.jpg"
              width="100%"
            />
          </a>
          Big Logo-print cotton tank top
          <p
            class="c13"
          >
            £60
          </p>
        </div>
        <div
          class="c12"
        >
          <a
            aria-label="GHST contrast-panel performance top"
            href="/products/2XU-GHST-contrast-panel-performance-top-1261987"
          >
            <img
              alt="GHST contrast-panel performance top"
              src="//assetsprx.matchesfashion.com/img/product/1261987_1_small.jpg"
              width="100%"
            />
          </a>
          GHST contrast-panel performance top
          <p
            class="c13"
          >
            £70
          </p>
        </div>
        <div
          class="c12"
        >
          <a
            aria-label="Marion stretch-jersey T-shirt"
            href="/products/Caf%C3%A9-Du-Cycliste-Marion-stretch-jersey-T-shirt-1263246"
          >
            <img
              alt="Marion stretch-jersey T-shirt"
              src="//assetsprx.matchesfashion.com/img/product/1263246_1_small.jpg"
              width="100%"
            />
          </a>
          Marion stretch-jersey T-shirt
          <p
            class="c13"
          >
            £40
          </p>
        </div>
        <div
          class="c12"
        >
          <a
            aria-label="Royston track pants"
            href="/products/Iffley-Road-Royston-track-pants-1261948"
          >
            <img
              alt="Royston track pants"
              src="//assetsprx.matchesfashion.com/img/product/1261948_1_small.jpg"
              width="100%"
            />
          </a>
          Royston track pants
          <p
            class="c13"
          >
            £110
          </p>
        </div>
        <div
          class="c12"
        >
          <a
            aria-label="Fellows long-sleeved stretch-mesh T-shirt"
            href="/products/Castore-Fellows-long-sleeved-stretch-mesh-T-shirt-1262688"
          >
            <img
              alt="Fellows long-sleeved stretch-mesh T-shirt"
              src="//assetsprx.matchesfashion.com/img/product/1262688_1_small.jpg"
              width="100%"
            />
          </a>
          Fellows long-sleeved stretch-mesh T-shirt
          <p
            class="c13"
          >
            £120
          </p>
        </div>
        <div
          class="c12"
        >
          <a
            aria-label="Quarter-zip technical hooded jacket "
            href="/products/Satisfy-Quarter-zip-technical-hooded-jacket--1256196"
          >
            <img
              alt="Quarter-zip technical hooded jacket "
              src="//assetsprx.matchesfashion.com/img/product/1256196_1_small.jpg"
              width="100%"
            />
          </a>
          Quarter-zip technical hooded jacket 
          <p
            class="c13"
          >
            £395
          </p>
        </div>
        <div
          class="c12"
        >
          <a
            aria-label="Logo-print longline performance T-shirt"
            href="/products/And-Wander-Logo-print-longline-performance-T-shirt-1256816"
          >
            <img
              alt="Logo-print longline performance T-shirt"
              src="//assetsprx.matchesfashion.com/img/product/1256816_1_small.jpg"
              width="100%"
            />
          </a>
          Logo-print longline performance T-shirt
          <p
            class="c13"
          >
            £245
          </p>
        </div>
        <div
          class="c12"
        >
          <a
            aria-label="Compression running leggings"
            href="/products/2XU-Compression-running-leggings-1261980"
          >
            <img
              alt="Compression running leggings"
              src="//assetsprx.matchesfashion.com/img/product/1261980_1_small.jpg"
              width="100%"
            />
          </a>
          Compression running leggings
          <p
            class="c13"
          >
            £105
          </p>
        </div>
        <div
          class="c12"
        >
          <a
            aria-label="FF-logo appliqué cotton T-shirt"
            href="/products/Fendi-FF-logo-appliqu%C3%A9-cotton-T-shirt-1288573"
          >
            <img
              alt="FF-logo appliqué cotton T-shirt"
              src="//assetsprx.matchesfashion.com/img/product/1288573_1_small.jpg"
              width="100%"
            />
          </a>
          FF-logo appliqué cotton T-shirt
          <p
            class="c13"
          >
            £250
          </p>
        </div>
        <div
          class="c12"
        >
          <a
            aria-label="Mesh-panel performance top"
            href="/products/And-Wander-Mesh-panel-performance-top-1256818"
          >
            <img
              alt="Mesh-panel performance top"
              src="//assetsprx.matchesfashion.com/img/product/1256818_1_small.jpg"
              width="100%"
            />
          </a>
          Mesh-panel performance top
          <p
            class="c13"
          >
            £200
          </p>
        </div>
        <div
          class="c12"
        >
          <a
            aria-label="Performance T-shirt"
            href="/products/Falke-Ess-Performance-T-shirt-1247641"
          >
            <img
              alt="Performance T-shirt"
              src="//assetsprx.matchesfashion.com/img/product/1247641_1_small.jpg"
              width="100%"
            />
          </a>
          Performance T-shirt
          <p
            class="c13"
          >
            £85
          </p>
        </div>
        <div
          class="c12"
        >
          <a
            aria-label="Climbing belted trousers"
            href="/products/And-Wander-Climbing-belted-trousers-1256811"
          >
            <img
              alt="Climbing belted trousers"
              src="//assetsprx.matchesfashion.com/img/product/1256811_1_small.jpg"
              width="100%"
            />
          </a>
          Climbing belted trousers
          <p
            class="c13"
          >
            £280
          </p>
        </div>
        <div
          class="c12"
        >
          <a
            aria-label="Guard technical jacket "
            href="/products/Nemen-Guard-technical-jacket--1261151"
          >
            <img
              alt="Guard technical jacket "
              src="//assetsprx.matchesfashion.com/img/product/1261151_1_small.jpg"
              width="100%"
            />
          </a>
          Guard technical jacket 
          <p
            class="c13"
          >
            £570
          </p>
        </div>
        <div
          class="c12"
        >
          <a
            aria-label="Constrast-panel performance jacket"
            href="/products/Nemen-Constrast-panel-performance-jacket-1261142"
          >
            <img
              alt="Constrast-panel performance jacket"
              src="//assetsprx.matchesfashion.com/img/product/1261142_1_small.jpg"
              width="100%"
            />
          </a>
          Constrast-panel performance jacket
          <p
            class="c13"
          >
            £750
          </p>
        </div>
        <div
          class="c12"
        >
          <a
            aria-label="Guard reflective jacket"
            href="/products/Nemen-Guard-reflective-jacket-1261139"
          >
            <img
              alt="Guard reflective jacket"
              src="//assetsprx.matchesfashion.com/img/product/1261139_1_small.jpg"
              width="100%"
            />
          </a>
          Guard reflective jacket
          <p
            class="c13"
          >
            £795
          </p>
        </div>
        <div
          class="c12"
        >
          <a
            aria-label="Revolt technical jacket "
            href="/products/Nemen-Revolt-technical-jacket--1261140"
          >
            <img
              alt="Revolt technical jacket "
              src="//assetsprx.matchesfashion.com/img/product/1261140_1_small.jpg"
              width="100%"
            />
          </a>
          Revolt technical jacket 
          <p
            class="c13"
          >
            £570
          </p>
        </div>
        <div
          class="c12"
        >
          <a
            aria-label="Dondi crew-neck technical sweatshirt"
            href="/products/Nemen-Dondi-crew-neck-technical-sweatshirt-1261149"
          >
            <img
              alt="Dondi crew-neck technical sweatshirt"
              src="//assetsprx.matchesfashion.com/img/product/1261149_1_small.jpg"
              width="100%"
            />
          </a>
          Dondi crew-neck technical sweatshirt
          <p
            class="c13"
          >
            £370
          </p>
        </div>
        <div
          class="c12"
        >
          <a
            aria-label="Scramble nylon shorts "
            href="/products/Nemen-Scramble-nylon-shorts--1261148"
          >
            <img
              alt="Scramble nylon shorts "
              src="//assetsprx.matchesfashion.com/img/product/1261148_1_small.jpg"
              width="100%"
            />
          </a>
          Scramble nylon shorts 
          <p
            class="c13"
          >
            £320
          </p>
        </div>
        <div
          class="c12"
        >
          <a
            aria-label="Crushed technical fabric trousers"
            href="/products/Nemen-Crushed-technical-fabric-trousers-1261147"
          >
            <img
              alt="Crushed technical fabric trousers"
              src="//assetsprx.matchesfashion.com/img/product/1261147_1_small.jpg"
              width="100%"
            />
          </a>
          Crushed technical fabric trousers
          <p
            class="c13"
          >
            £350
          </p>
        </div>
        <div
          class="c12"
        >
          <a
            aria-label="Utility shell sweatshirt"
            href="/products/Nemen-Utility-shell-sweatshirt-1261141"
          >
            <img
              alt="Utility shell sweatshirt"
              src="//assetsprx.matchesfashion.com/img/product/1261141_1_small.jpg"
              width="100%"
            />
          </a>
          Utility shell sweatshirt
          <p
            class="c13"
          >
            £370
          </p>
        </div>
        <div
          class="c12"
        >
          <a
            aria-label="Dondi technical-shell sweatshirt"
            href="/products/Nemen-Dondi-technical-shell-sweatshirt-1261145"
          >
            <img
              alt="Dondi technical-shell sweatshirt"
              src="//assetsprx.matchesfashion.com/img/product/1261145_1_small.jpg"
              width="100%"
            />
          </a>
          Dondi technical-shell sweatshirt
          <p
            class="c13"
          >
            £370
          </p>
        </div>
        <div
          class="c12"
        >
          <a
            aria-label="Marking reflective jacket"
            href="/products/Nemen-Marking-reflective-jacket-1261143"
          >
            <img
              alt="Marking reflective jacket"
              src="//assetsprx.matchesfashion.com/img/product/1261143_1_small.jpg"
              width="100%"
            />
          </a>
          Marking reflective jacket
          <p
            class="c13"
          >
            £750
          </p>
        </div>
        <div
          class="c12"
        >
          <a
            aria-label="Haloes hybrid hooded down-filled jacket"
            href="/products/Salomon-Haloes-hybrid-hooded-down-filled-jacket-1263534"
          >
            <img
              alt="Haloes hybrid hooded down-filled jacket"
              src="//assetsprx.matchesfashion.com/img/product/1263534_1_small.jpg"
              width="100%"
            />
          </a>
          Haloes hybrid hooded down-filled jacket
          <p
            class="c13"
          >
            £160
          </p>
        </div>
        <div
          class="c12"
        >
          <a
            aria-label="Agile mesh-panel performance shorts"
            href="/products/Salomon-Agile-mesh-panel-performance-shorts-1263551"
          >
            <img
              alt="Agile mesh-panel performance shorts"
              src="//assetsprx.matchesfashion.com/img/product/1263551_1_small.jpg"
              width="100%"
            />
          </a>
          Agile mesh-panel performance shorts
          <p
            class="c13"
          >
            £45
          </p>
        </div>
        <div
          class="c12"
        >
          <a
            aria-label="Agile polka dot-print performance jacket"
            href="/products/Salomon-Agile-polka-dot-print-performance-jacket-1263537"
          >
            <img
              alt="Agile polka dot-print performance jacket"
              src="//assetsprx.matchesfashion.com/img/product/1263537_1_small.jpg"
              width="100%"
            />
          </a>
          Agile polka dot-print performance jacket
          <p
            class="c13"
          >
            £70
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`With Snapshot Testing Plp - show filters button 2`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -91,22 +91,22 @@
      </button>
      <div
        class=\\"plp__SearchContainer-nqjubr-1 ippoBd\\"
      >
        <div
-         class=\\"cheeseburger-menu\\"
+         class=\\"cheeseburger-menu open\\"
        >
          <div
            class=\\"cheeseburger-menu-overlay\\"
-           style=\\"position: fixed; top: 0px; bottom: 0px; left: 0px; right: 0px; z-index: 1001; background: rgba(0, 0, 0, 0.3); opacity: 0; transition: opacity 0.3s, transform 0s 0.3s; transform: translate3d(100%, 0px, 0px);\\"
+           style=\\"position: fixed; top: 0px; bottom: 0px; left: 0px; right: 0px; z-index: 1001; background: rgba(0, 0, 0, 0.3); opacity: 1; transition: opacity 0.3s; transform: none;\\"
          />
          <div
            tolerance=\\"0\\"
          >
            <div
              class=\\"cheeseburger-menu-outer\\"
-             style=\\"position: fixed; left: 0px; top: 0px; bottom: 0px; z-index: 1002; width: 220px; max-width: 80%; transition: transform 0.3s; transform: translate3d(-100%, 0px, 0px); transform-origin: left; background-color: white;\\"
+             style=\\"position: fixed; left: 0px; top: 0px; bottom: 0px; z-index: 1002; width: 220px; max-width: 80%; transition: transform 0.3s; transform: translate3d(0px, 0px, 0px); transform-origin: left; background-color: white;\\"
            >
              <div
                class=\\"cheeseburger-menu-inner touch\\"
                style=\\"height: 100%; padding-bottom: 0px; overflow-y: auto;\\"
              >
@@ -509,11 +509,11 @@
                  </div>
                </div>
              </div>
              <div
                class=\\"cheeseburger-menu-shadow\\"
-               style=\\"position: absolute; z-index: -1; width: 100%; height: 100%; transition: opacity 0.3s; box-shadow: 0 0 15px 0 rgba(0, 0, 0, .2); opacity: 0; top: 0px; bottom: 0px; left: 0px; right: 0px;\\"
+               style=\\"position: absolute; z-index: -1; width: 100%; height: 100%; transition: opacity 0.3s; box-shadow: 0 0 15px 0 rgba(0, 0, 0, .2); opacity: 1; top: 0px; bottom: 0px; left: 0px; right: 0px;\\"
              />
            </div>
          </div>
        </div>
        <div"
`;

exports[`With Snapshot Testing Plp - show filters button 3`] = `Object {}`;

exports[`With Snapshot Testing Plp getInitialProps 1`] = `
Object {
  "categoryFacets": undefined,
  "facets": undefined,
  "gender": "mens",
  "results": undefined,
}
`;

exports[`With Snapshot Testing Plp getInitialProps 2`] = `
Object {
  "categoryFacets": undefined,
  "facets": undefined,
  "gender": "womens",
  "results": undefined,
}
`;

exports[`With Snapshot Testing Plp getInitialProps 3`] = `
Object {
  "categoryFacets": undefined,
  "facets": undefined,
  "gender": "mens",
  "results": undefined,
}
`;
